JumpScript/tests/baselines/reference/invalidModuleWithVarStatements.errors.txt
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(4,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(8,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(12,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(16,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(20,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump(25,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.


==== tests/cases/conformance/internalModules/moduleBody/invalidModuleWithVarStatements.jump (6 errors) ====
    // All of these should be an error
    
    module Y {
        public var x: number = 0;
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module Y2 {
        public function fn(x: string) { }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module Y4 {
        static var x: number = 0;
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    
    module YY {
        static function fn(x: string) { }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    
    module YY2 {
        private var x: number = 0;
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    
    
    module YY3 {
        private function fn(x: string) { }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    